Add project lombok